<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:background="@color/layout_background"
              android:padding="4dp"
              android:gravity="center"
              android:orientation="vertical"
>
<!-- -->
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:background="@color/white"
    >
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/generate_btn_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
            />
            <Button
                    android:id="@+id/btn_generate_random_close"
                    android:text="@string/colse_btn_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"

                    android:paddingHorizontal="@dimen/btn_padding_horizontal"
                    android:paddingVertical="@dimen/btn_padding_vertical"
                    android:backgroundTint="@color/light_black"
                    android:textColor="@color/organge"
                    android:textSize="@dimen/btn_text_size"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="@dimen/btn_layout_margin_vertical"
                    android:layout_marginVertical="@dimen/btn_layout_margin_vertical"
                    app:cornerRadius="@dimen/corner_radius"
                    style="?android:attr/buttonBarButtonStyle"

            />
        </LinearLayout>
        <EditText
                android:id="@+id/etn_count_random"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/etn_count_random_name"
                android:minHeight="48dp"
                android:digits="0123456789"
                android:layout_gravity="center"
                android:importantForAutofill="no"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

        >
            <EditText
                    android:id="@+id/etn_min_random"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/etn_min_random_name"
                    android:minHeight="48dp"
                    android:digits="0123456789"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:importantForAutofill="no"/>

            <TextView
                    android:text="@string/tv_random_space"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
            />

            <EditText
                    android:id="@+id/et_max_random"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/et_max_random_name"
                    android:minHeight="48dp"
                    android:digits="0123456789"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:importantForAutofill="no"
            />

        </LinearLayout>
        <Button
                android:id="@+id/btn_genrate_random"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/btn_genrate_radnom_name"
                android:layout_weight="1"
                android:layout_gravity="center"

                android:paddingHorizontal="@dimen/btn_padding_horizontal"
                android:paddingVertical="@dimen/btn_padding_vertical"
                android:backgroundTint="@color/light_black"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_text_size"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:layout_marginHorizontal="@dimen/btn_layout_margin_horizontal"
                android:layout_marginVertical="@dimen/btn_layout_margin_vertical"
                app:cornerRadius="@dimen/corner_radius"
                style="?android:attr/buttonBarButtonStyle"
        />
    </LinearLayout>


</LinearLayout>
